# network-rca-causality

./: .gitignore  ANALYSIS_SUMMARY.md  CORRELATION_VS_CAUSATION_SUMMARY.md  EXPERIMENT.md  README.md  confounder_tuning_full_report.txt  confounder_tuning_report.txt  output_log.txt  pyproject.toml  requirements.txt
experiments/: RCA_REPORT.html  RCA_REPORT.md  causal_discovery.py  check_rstp.py  exploratory_analysis.py  focused_analysis.py  prepare_data.py  run_experiments.py
src/netflow_simulator/: cli.py
src/netflow_simulator/actors/: __init__.py  admin.py
src/netflow_simulator/core/: __init__.py  appliance.py  network.py
src/netflow_simulator/exporters/: __init__.py  csv_exporter.py
src/netflow_simulator/faults/: __init__.py  engine.py
src/netflow_simulator/generators/: __init__.py  protocols.py  traffic.py
src/netflow_simulator/scm/: __init__.py  graph.py
tuning_output/conf_3.0/: admin_events.csv  ground_truth_faults.csv  summary.md  system_events.csv
tuning_output/conf_3.5/: admin_events.csv  ground_truth_faults.csv  summary.md  system_events.csv
tuning_output/conf_4.0/: admin_events.csv  ground_truth_faults.csv  scm_dag.dot  summary.md  system_events.csv
tuning_output/conf_4.5/: admin_events.csv  ground_truth_faults.csv  summary.md  system_events.csv
tuning_output/conf_5.0/: admin_events.csv  ground_truth_faults.csv  summary.md  system_events.csv
